# CTO

./: .breakpoints  .gitignore  .replit  api.py  app.py  login_manager.py  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.js  user.py
api/: airtable_ops.py  auth.py  dropbox_ops.py  env_config.py  utils.py
api/Dropbox/: __init__.py  dropbox-access-token.txt  dropbox-refresh-token.txt  dropbox_ops.py  get_refresh_token.py  get_token.py  test.txt
route/: __init__.py  authentication.py  crud.py  error.py  page.py
route/function/: authentication.py  crud.py  page.py
route/mapping/: routes.py
static/css/: main.css  style.css
templates/: 404.html  500.html  add_form.html  all-applications.html  all-companies.html  all_companies.html  application.html  applications.html  browse_all.html  dashboard.html  form.html  index.html  job_offers.html  login.html  look-hires.html  macros.html  sign-up.html  sign_up.html  update-form.html  update_form.html
templates/macros/: application_list.html  company_profile_card.html  macros.html  navbar.html
templates/modals/: add_modal.html  edit_modal.html
utils/filter/: __init__.py  format_datetime.py
